OG image and sharing

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- Open Graph / Social -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tezos.systems/">
-    <meta property="og:title" content="Tezos Systems">
-    <meta property="og:description" content="Real-time Tezos network stats: baker counts, tz4/BLS adoption, issuance rate, and transaction volume">
+    <meta property="og:title" content="Tezos Systems — The Blockchain That Upgrades Itself">
+    <meta property="og:description" content="21 self-amendments. Zero hard forks. Since 2018. Live dashboard tracking the most resilient blockchain in crypto.">
     <meta property="og:image" content="https://tezos.systems/og-image.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image:width" content="1120">
+    <meta property="og:image:height" content="970">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Tezos Systems">
-    <meta name="twitter:description" content="Real-time Tezos network stats: baker counts, tz4/BLS adoption, issuance rate, and transaction volume">
+    <meta name="twitter:title" content="Tezos Systems — The Blockchain That Upgrades Itself">
+    <meta name="twitter:description" content="21 self-amendments. Zero hard forks. Since 2018. Live dashboard tracking the most resilient blockchain in crypto.">
     <meta name="twitter:image" content="https://tezos.systems/og-image.png">
     
     <!-- Content Security Policy -->
@@ -1312,12 +1312,10 @@
     <div class="modal-overlay" id="history-modal" aria-hidden="true">
         <div class="modal-content modal-large">
             <button class="modal-close" id="history-modal-close">&times;</button>
-            <div style="display: flex; align-items: center; justify-content: space-between; gap: 12px;">
-                <h3 class="modal-title" style="margin: 0;">Historical Data</h3>
-                <button class="info-button" id="history-share-btn" aria-label="Share snapshot" title="Share snapshot" style="margin-right: 32px;">
-                    📸
-                </button>
-            </div>
+            <button class="info-button" id="history-share-btn" aria-label="Share snapshot" title="Share snapshot" style="position: absolute; top: 16px; right: 52px; z-index: 10;">
+                📸
+            </button>
+            <h3 class="modal-title">Historical Data</h3>
 
             <div class="history-controls">
                 <button class="time-range-btn" data-range="24h">24 Hours</button>
