Fix historical sharing

--- a/index.html
+++ b/index.html
@@ -1312,7 +1312,7 @@
     <div class="modal-overlay" id="history-modal" aria-hidden="true">
         <div class="modal-content modal-large">
             <button class="modal-close" id="history-modal-close">&times;</button>
-            <button class="info-button" id="history-share-btn" aria-label="Share snapshot" title="Share snapshot" style="position: absolute; top: 16px; right: 52px; z-index: 10;">
+            <button class="info-button" id="history-share-btn" aria-label="Share snapshot" title="Share snapshot" style="position: absolute; top: 56px; right: calc(1.5rem + 2px); z-index: 10;">
                 📸
             </button>
             <h3 class="modal-title">Historical Data</h3>
