Reorganize and fix battle image formatting

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="styles.css?v=20260211g">
+    <link rel="stylesheet" href="css/styles.css?v=20260212a">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -1372,7 +1372,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
     <!-- Load app as module -->
-    <script type="module" src="app.js?v=20260211f"></script>
+    <script type="module" src="js/core/app.js?v=20260211f"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
@@ -1511,11 +1511,11 @@
         </div>
     </div>
 
-    <script type="module" src="history.js"></script>
-    <script type="module" src="matrix-effects.js"></script>
-    <script type="module" src="bg-effects.js"></script>
-    <script type="module" src="gauge.js?v=3"></script>
-    <script type="module" src="price.js"></script>
-    <script type="module" src="comparison.js"></script>
+    <script type="module" src="js/features/history.js"></script>
+    <script type="module" src="js/effects/matrix-effects.js"></script>
+    <script type="module" src="js/effects/bg-effects.js"></script>
+    <script type="module" src="js/ui/gauge.js?v=3"></script>
+    <script type="module" src="js/features/price.js"></script>
+    <script type="module" src="js/features/comparison.js"></script>
 </body>
 </html>
