Feedback or contribute

--- a/index.html
+++ b/index.html
@@ -1309,6 +1309,10 @@
             Data from <a href="https://tzkt.io" target="_blank" rel="noopener">TzKT</a>
             and <a href="https://eu.rpc.tez.capital" target="_blank" rel="noopener">Tez.Capital</a>
         </p>
+        <p class="attribution">
+            Feedback or want to contribute? <a href="https://github.com/Primate411/tezos.systems/issues" target="_blank" rel="noopener">Open an issue</a>
+            or <a href="https://github.com/Primate411/tezos.systems/pulls" target="_blank" rel="noopener">submit a PR</a> on GitHub.
+        </p>
     </footer>
 
     <!-- History Modal -->
