--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon-48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00d4ff">
+    <link rel="manifest" href="site.webmanifest">
 
-    <link rel="stylesheet" href="css/styles.css?v=20260212c">
+    <link rel="stylesheet" href="css/styles.css?v=20260212d">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -1157,6 +1161,17 @@
         </section>
 
         <!-- Calculator moved to my-baker toggle area above -->
+
+        <!-- Network Moments Section -->
+        <section class="stats-section" id="moments-section">
+            <div class="section-header">
+                <h2 class="section-title">🎯 Network Moments</h2>
+            </div>
+            <div id="moments-timeline-content" class="moments-timeline">
+                <div class="moments-empty">No moments recorded yet. Keep watching!</div>
+            </div>
+        </section>
+
     </main>
 
     <!-- Comparison Info Modal -->
@@ -1465,7 +1480,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
     <!-- Load app as module -->
-    <script type="module" src="js/core/app.js?v=20260212c"></script>
+    <script type="module" src="js/core/app.js?v=20260212d"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
@@ -1610,5 +1625,7 @@
     <script type="module" src="js/ui/gauge.js?v=3"></script>
     <script type="module" src="js/features/price.js"></script>
     <script type="module" src="js/features/comparison.js"></script>
+    <!-- Moments Toast Container -->
+    <div id="moments-toast-container"></div>
 </body>
 </html>
