Network Moments to top dismissable, padding on dark theme

--- a/index.html
+++ b/index.html
@@ -519,6 +519,17 @@
     <!-- Main content -->
     <main class="main-content" role="main">
 
+        <!-- Network Moments (milestone alerts) -->
+        <section class="stats-section" id="moments-section" style="display:none;">
+            <div class="section-header">
+                <h2 class="section-title">🎯 Network Moments</h2>
+                <button class="glass-button moments-dismiss-all" id="moments-dismiss-all" aria-label="Dismiss all moments" title="Dismiss all">✕</button>
+            </div>
+            <div id="moments-timeline-content" class="moments-timeline">
+                <div class="moments-empty">No moments recorded yet. Keep watching!</div>
+            </div>
+        </section>
+
         <!-- Consensus Section -->
         <section class="stats-section">
             <div class="section-header">
@@ -1163,16 +1174,7 @@
         <!-- Calculator moved to my-baker toggle area above -->
 
         <!-- Network Moments Section -->
-        <section class="stats-section" id="moments-section">
-            <div class="section-header">
-                <h2 class="section-title">🎯 Network Moments</h2>
-            </div>
-            <div id="moments-timeline-content" class="moments-timeline">
-                <div class="moments-empty">No moments recorded yet. Keep watching!</div>
-            </div>
-        </section>
-
-    </main>
+            </main>
 
     <!-- Comparison Info Modal -->
     <div class="modal-overlay" id="comparison-modal" aria-hidden="true">
