Add LB to issuance card

--- a/index.html
+++ b/index.html
@@ -672,6 +672,7 @@
                             <div class="stat-value" id="issuance-rate-front">
                                 <span class="loading">...</span>
                             </div>
+                            <div class="issuance-breakdown" id="issuance-breakdown"></div>
                             <div class="sparkline-container"><canvas id="issuance-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="issuance-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
