--- a/index.html
+++ b/index.html
@@ -274,6 +274,9 @@
                         <button id="changelog-btn" class="glass-button" aria-label="Changelog" title="Changelog">
                             <span>📋</span> <span class="dropdown-label">Changelog</span>
                         </button>
+                        <button id="shortcuts-btn" class="glass-button" aria-label="Keyboard shortcuts" title="Keyboard shortcuts">
+                            <span>⌨️</span> <span class="dropdown-label">Shortcuts</span>
+                        </button>
                     </div>
                 </div>
             </div>
