Add Baker Leaderboard + shareable My Baker URLs
Features:
- Baker Leaderboard: sortable table of ~250 active bakers (📊 → 🏆)
  - Columns: Staking Power, Delegators, Stakers, Capacity %, tz4 status
  - Click row to populate My Baker, keyboard shortcut 'l', deep-link #leaderboard
  - tz4 detection via consensus key ops (not address prefix)
  - Lazy-loads, 10min cache, mobile responsive
- Shareable My Baker URLs: tezos.systems/tz1abc... via 404.html redirect
  - 🔗 button copies production URL to clipboard
  - execCommand fallback for non-HTTPS contexts

Fixes:
- TzKT sort.desc=stakingBalance not allowed with select → sort.desc=id
- Clipboard API fallback for LAN/non-secure contexts
- tz4 column now checks actual consensus key, not baker address prefix

--- a/404.html
+++ b/404.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 — Tezos Systems</title>
+    <script>
+        // Redirect /tz1.../tz2.../tz3.../tz4.../KT1... paths to dashboard with My Baker
+        (function() {
+            var path = window.location.pathname.replace(/^\//, '').replace(/\/$/, '');
+            if (/^(tz[1-4]|KT1)[a-zA-Z0-9]{33}$/.test(path)) {
+                window.location.replace('/#my-baker=' + path);
+            }
+        })();
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
